--- a/src/component/sheet/Cell.module.css
+++ b/src/component/sheet/Cell.module.css
@@ -1,3 +1,7 @@
 .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0.1px solid black;
   background-color: cadetblue;
 }
