--- a/src/component/sheet/Cell.module.css
+++ b/src/component/sheet/Cell.module.css
@@ -2,6 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 0.1px solid black;
-  background-color: cadetblue;
+  border: 0.1px solid #e1e1e1;
+  background-color: #ffffff;
 }
