--- a/src/component/sheet/ColHeader.module.css
+++ b/src/component/sheet/ColHeader.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 0.1px solid black;
+  border: 0.1px solid #c4c7c5;
 }
 
 .container {
