--- a/src/component/sheet/RowHeader.module.css
+++ b/src/component/sheet/RowHeader.module.css
@@ -2,5 +2,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 0.1px solid black;
+  border: 0.1px solid #c4c7c5;
 }
