--- a/src/component/sheet/Cell.module.css
+++ b/src/component/sheet/Cell.module.css
@@ -4,8 +4,19 @@
   align-items: center;
   border: 0.1px solid #e1e1e1;
   background-color: #ffffff;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .focused {
   border: 2px solid #1a73e8;
+}
+
+.editorInput {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border: none;
+  box-sizing: border-box;
+  font: inherit;
 }
