✨ Cell 드래그 선택 기능 구현
- useSheetStore에 SelectionSlice, type Rect 추가

- SelectionOverlay 컴포넌트 구현: 드래깅 후 mouseup 시 선택 영역 테두리

--- a/src/component/sheet/Cell.module.css
+++ b/src/component/sheet/Cell.module.css
@@ -1,4 +1,5 @@
 .container {
+  outline: none;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,7 +11,11 @@
 }
 
 .focused {
-  border: 2px solid #1a73e8;
+  border: 2px solid rgb(26, 115, 232);
+}
+
+.selected {
+  background-color: #e9effd;
 }
 
 .editorInput {
