--- a/src/component/sheet/RowHeader.module.css
+++ b/src/component/sheet/RowHeader.module.css
@@ -1,6 +1,24 @@
+.container {
+  display: grid;
+  grid-auto-rows: auto;
+  user-select: none;
+}
+
 .rowHeader {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   border: 0.1px solid #c4c7c5;
+}
+
+.rowResizeHandle {
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  width: 100%;
+  height: 6px;
+  cursor: row-resize;
+  background: transparent;
+  z-index: 10;
 }
