--- a/src/components/Login.module.css
+++ b/src/components/Login.module.css
@@ -7,15 +7,20 @@
 }
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: 420px;
 }
 
 .title {
+  display: flex;
+  justify-content: center;
+  margin-right: 30px;
+  align-items: center;
   font-size: 32px;
   font-weight: 800;
   letter-spacing: 0.5px;
-  text-align: center;
   margin-bottom: 16px;
   color: #0f172a; /* slate-900 */
 }
