--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   background-color: #fafbfd;
-  padding: 20px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .rowContainer {
   display: flex;
