--- a/src/components/sheet/Sheet.module.css
+++ b/src/components/sheet/Sheet.module.css
@@ -17,7 +17,7 @@
   left: 0;
   background-color: #ffffff;
   z-index: 5;
-  border: 0.1px solid black;
+  border: 0.1px solid #c4c7c5;
 }
 
 .colHeader {
