--- a/src/components/header/ToolBar.module.css
+++ b/src/components/header/ToolBar.module.css
@@ -1,4 +1,8 @@
 .toolBarConatiner {
   display: flex;
-  margin-bottom: 30px;
+
+  gap: 10px;
+  background-color: #f0f4f9;
+  padding: 13px 15px;
+  border-radius: 10px;
 }
