--- a/src/components/sheet/Cell.module.css
+++ b/src/components/sheet/Cell.module.css
@@ -23,3 +23,17 @@
   box-sizing: border-box;
   font-size: 13px;
 }
+
+/* 좌하단 정렬: 텍스트는 좌측 정렬 */
+.alignBottomLeft {
+  align-items: flex-end; /* 세로: 아래 */
+  justify-content: flex-start; /* 가로: 왼쪽 */
+  text-align: left;
+}
+
+/* 우하단 정렬: 텍스트는 우측 정렬 */
+.alignBottomRight {
+  align-items: flex-end; /* 세로: 아래 */
+  justify-content: flex-end; /* 가로: 오른쪽 */
+  text-align: right;
+}
