--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-top: 7px;
   margin-bottom: 5px;
 }
 .left {
@@ -24,7 +25,7 @@
   background-color: #e8f3ff; /* 밝은 하늘색 톤 */
   border: 1px solid #a9b6c3; /* 회색보다 부드러운 톤 */
   border-radius: 20px;
-  padding: 8px 16px;
+  padding: 4px 16px;
   color: #1a1a1a;
   font-weight: 600;
   cursor: pointer;
