--- a/src/components/sheet/ColHeader.module.css
+++ b/src/components/sheet/ColHeader.module.css
@@ -4,6 +4,7 @@
 
 .colHeader {
   position: relative;
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
