--- a/src/components/sheet/RowHeader.module.css
+++ b/src/components/sheet/RowHeader.module.css
@@ -6,6 +6,7 @@
 
 .rowHeader {
   position: relative;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
