🎨 ToolBar CSS 조정

--- a/src/components/header/ToolBar.module.css
+++ b/src/components/header/ToolBar.module.css
@@ -203,6 +203,7 @@
 
 .sectionTitle {
   font-size: 12px;
+  white-space: nowrap;
   color: black;
   margin-left: 2px;
   margin-right: 2px;
@@ -218,7 +219,7 @@
 
 .borderWidthInput {
   width: 26px;
-  height: 2 8px;
+  height: 20px;
   border: 1px solid #dfe3ea;
   border-radius: 6px;
   padding: 0 6px;
@@ -226,7 +227,7 @@
 }
 
 .borderStyleSelect {
-  height: 28px;
+  height: 23px;
   border: 1px solid #dfe3ea;
   border-radius: 6px;
   background: #fff;
@@ -412,7 +413,6 @@
   background: #fff;
   border: 1px solid #d9dde3;
   border-radius: 8px;
-  margin-left: 6px;
 }
 
 .mergeToggleBtn {
