--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -22,12 +22,11 @@
   display: flex;
 }
 .logOutBtn {
-  background-color: #e8f3ff; /* 밝은 하늘색 톤 */
-  border: 1px solid #a9b6c3; /* 회색보다 부드러운 톤 */
+  background-color: #e8f3ff;
+  border: 1px solid #a9b6c3;
   border-radius: 20px;
-  padding: 4px 16px;
-  color: #1a1a1a;
-  font-weight: 600;
+  padding: 4px 10px;
+  font-weight: 400;
   cursor: pointer;
   transition: all 0.2s ease;
 }
