--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -178,3 +178,8 @@
   transform: translateY(calc(-100% - 8px));
   transform-origin: bottom left;
 }
+
+.dragOver {
+  outline: 2px dashed rgba(0, 0, 0, 0.25);
+  outline-offset: -2px;
+}
