--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -3,8 +3,9 @@
   display: flex;
   flex-direction: column;
   background-color: #fafbfd;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
+
+  min-width: 0;
 }
 .rowContainer {
   display: flex;
